@@ -62,6 +62,8 @@ Features
   SCIPgetVarCopy, they are currently not used in conflict constraints, and cuts involving them are not upgraded to linear constraints.
   Relaxation-only variables cannot appear in the objective function.
 
+- The OSiL reader now supports nonlinear expressions of type "signpower".
+
 
 Performance improvements
 ------------------------
